# devcontainer_sample

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  docker-compose.yml
.devcontainer_docker-compose/: Dockerfile  devcontainer.json
.devcontainer_docker-compose/initdb.d/: crate_table.sql
.devcontainer_dockerfile/: Dockerfile  devcontainer.json
.devcontainer_poetry/: Dockerfile  devcontainer.json
src/: aaa.py
tests/: test_aaa.py
