[tool.poetry]
name = "devcontainer-sample"
version = "0.1.0"
description = ""
authors = ["ikedayusaku <y_ikeda@everglowtrading.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.1"
pytest-mock = "^3.10.0"
dataset = "^1.6.0"
mysqlclient = "^2.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
